try and fix button text showing as link color on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,12 @@
 .app {
   max-width: 1280px;
   margin: 0px auto 0px;
-  padding: 0px 48px;
+  padding: 0px 32px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
   .app {
-    padding: 0px 32px;
+    padding: 0px 48px;
   }
 }
 
@@ -82,6 +82,15 @@
   min-width: 250px;
   min-height: 300px;
 }
+
+/* button text show as blue like links on mobile */
+.hike-cards button.card:link, 
+.hike-cards button.card:visited, 
+.hike-cards button.card:hover,
+.hike-cards button.card:active {
+  color: inherit;
+}
+
 
 .hike-cards .card-header {
   white-space: nowrap;
